--- a/pom.xml
+++ b/pom.xml
@@ -40,15 +40,15 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.12-R0.1-SNAPSHOT</version>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.minecraft</groupId>
             <artifactId>nms-api</artifactId>
-            <version>1.12-R0.1-SNAPSHOT</version>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}\src\lib\Spigot-1.12.2.jar</systemPath>
+            <systemPath>${project.basedir}\src\lib\gta.jar</systemPath>
     </dependency>
     </dependencies>
 
